<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    tools:context=".fragments.LoginForm">

    <TextView
        android:id="@+id/trick_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trick_msg"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/user_et"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"/>

    <EditText
        android:id="@+id/user_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user"
        app:layout_constraintBottom_toTopOf="@+id/password_et"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trick_msg"
         />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/submit_login_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_et" />

    <Button
        android:id="@+id/submit_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_et" />
</androidx.constraintlayout.widget.ConstraintLayout>